--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=CONFIG-SERVER
 eureka.client.serviceUrl.defaultZone= ${EUREKA_URI:http://localhost:8761/eureka}
-eureka.instance.preferIpAddress: true
+eureka.instance.preferIpAddress= true
     
