--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,3 +1,3 @@
 spring.application.name=CONFIG-SERVER-DEV
 eureka.client.serviceUrl.defaultZone= ${EUREKA_URI:http://localhost:8761/eureka}
-eureka.instance.preferIpAddress: true
+eureka.instance.preferIpAddress= true
